@@ -553,7 +553,7 @@ struct {
   },
 };  
 
-static char *ospf_ism_event_str[] =
+const static char *ospf_ism_event_str[] =
 {
   "NoEvent",
   "InterfaceUp",
